k8s/homeassistant/homeassistant-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  serviceName: homeassistant
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
      annotations:
        configmap.reloader.stakater.com/reload: "homeassistant-config"
    spec:
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:2026.9.4@sha256:3e6710a7ab2a61311d9d899b719f6c3657791c63e8f4942cec4ebc42401d6b76
          ports:
            - containerPort: 8123
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 550Mi
            limits:
              memory: 550Mi
          volumeMounts:
            - name: homeassistant-config
              mountPath: /config
            - name: homeassistant-config-file
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant-data-pvc
        - name: homeassistant-config-file
          configMap:
            name: homeassistant-config
