k8s/homeassistant/zigbee2mqtt-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee2mqtt
  namespace: homeassistant
  labels:
    app: zigbee2mqtt
spec:
  serviceName: zigbee2mqtt
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
      annotations:
        configmap.reloader.stakater.com/reload: "zigbee2mqtt-config"
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:2.14.2@sha256:addbfb08fcef2e4477de1535636118241e10d13e898fbe4d9faba8a4d7396311
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 210Mi
            limits:
              memory: 210Mi
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /app/data
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data-pvc
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
