k8s/homeassistant/homeassistant-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-route
  namespace: homeassistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: homeassistant.oliverilp.ee
spec:
  parentRefs:
    - name: traefik-internal-gateway
      namespace: traefik
  hostnames:
    - homeassistant.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homeassistant
          port: 8123
