k8s/homeassistant/zigbee2mqtt-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-route
  namespace: homeassistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: z2m.oliverilp.ee
spec:
  parentRefs:
    - name: traefik-internal-gateway
      namespace: traefik
  hostnames:
    - z2m.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zigbee2mqtt
          port: 8080
